# code_review_ai

./: .gitignore  README.md  pyproject.toml
app/: github_api.py  main.py  open_ai_api.py
app/tests/: conftest.py  test_github_functionality.py  test_github_live_api.py  test_github_mocks_and_helpers.py  test_main.py  test_open_ai_live_api.py
