[tool.poetry]
name = "code-review-ai"
version = "0.1.0"
description = ""
authors = ["Oleh Kharkevych"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.3"
pydantic = "^2.9.2"
python-dotenv = "^1.0.1"
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
